<resources>
    <string name="app_name">E-Vidyashram</string>

    <!--    <string name="default_web_client_id">124059125423-f8tcstviaka9hrjao0mvnng61it0oc6u.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id">1230915777463500</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">069decbbf7aae66c69cb374977b0ebd3</string>

    <string name="forgotpassword"><u>Forgot Password?</u></string>
    <string name="remember">Remember me?</string>
    <string name="dhaa">Don\'t have an Account?<b> Sign Up</b></string>
    <string name="ahaa">Already have an Account?<b> Sign in</b></string>
    <string name="forgot">Don\'t worry just provide us your registered email so that we can send you reset password email!</string>
    <string name="hintEmail"><b>Email</b></string>
    <string name="hintPassword"><b>Password</b></string>
    <string name="hintusername"><b>User name</b></string>
    <string name="draweropen">Drawer Open</string>
    <string name="drawerclosed">Drawer Closed</string>
    <string name="readmore"><u>more</u></string>
    <string name="readless"><u>...less</u></string>

    <string name="messmenu">Receive Notifications about what\'s cooked in the mess before every meal</string>
    <string name="collegeevents">Receive Notificatons about all college events , seminars , guest lectures etc…</string>
    <string name="feedback">Please , provide feedback on our application about how it is and how can we improve it.</string>
    <string name="reportbug">Found a bug…Report it so that we can fix it.</string>
    <string name="about">Designed and Developed by :-\n\nTejas Pokale\nPranay Dhanke\nNirbhay Ghagre\nYash Gangamwar\nRishikesh Shinde</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>